tests/aether/positive/01_basic_fn.aether
// Smallest possible program: a fn returning an int.
fn main() -> i32 {
    return 0;
}
