tests/aether/negative/expect_AE0002_extern_with_body.aether
// extern fn must not have a body — the parser should reject this.
extern fn matmul(a: i32, b: i32) -> i32 {
    return 0;
}
